--- a/package.json
+++ b/package.json
@@ -1,32 +1,43 @@
 {
-  "name": "opennext-sample",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "deploy": "opennextjs-cloudflare && wrangler deploy",
-    "preview": "opennextjs-cloudflare && wrangler dev",
-    "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
-  },
-  "dependencies": {
-    "next": "14.2.23",
-    "react": "^18",
-    "react-dom": "^18"
-  },
-  "devDependencies": {
-    "@cloudflare/workers-types": "^4.20250129.0",
-    "@opennextjs/cloudflare": "0.4.x",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.23",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "wrangler": "^3.107.2"
-  }
+    "name": "opennext-sample",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "build:worker": "opennextjs-cloudflare",
+        "start": "next start",
+        "lint": "next lint",
+        "deploy": "opennextjs-cloudflare && wrangler deploy",
+        "preview": "opennextjs-cloudflare && wrangler dev",
+        "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts",
+        "db:migrate": "MIGRATING=true npx drizzle-kit migrate",
+        "db:generate": "npx drizzle-kit generate --name=opennext-sample",
+        "db:local": "npx wrangler d1 migrations apply opennext-sample --local"
+    },
+    "dependencies": {
+        "@types/better-sqlite3": "^7.6.12",
+        "better-auth": "^1.1.15",
+        "better-sqlite3": "^11.8.1",
+        "dotenv": "^16.4.7",
+        "drizzle-orm": "^0.39.2",
+        "next": "14.2.23",
+        "react": "^18",
+        "react-dom": "^18"
+    },
+    "devDependencies": {
+        "@cloudflare/workers-types": "^4.20250129.0",
+        "@opennextjs/cloudflare": "0.3.10",
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "drizzle-kit": "^0.30.4",
+        "eslint": "^8",
+        "eslint-config-next": "14.2.23",
+        "postcss": "^8",
+        "tailwindcss": "^3.4.1",
+        "tsx": "^4.19.2",
+        "typescript": "^5",
+        "wrangler": "^3.107.2"
+    }
 }
